<resources>
    <!-- app values -->
    <string name="app_name">NOTAS</string>
    <string name="app_welcome">Welcome to Notas</string>
    <string name="app_welcome2">The only note taking app you need!</string>
    <string name="app_notify">Get Notified</string>
    <string name="app_notes">Notes</string>
    <string name="app_home">Home</string>
    <string name="app_checklist">Check Lists</string>
    <string name="app_todo">Todos</string>
    <string name="app_madeBy">Made By: Nicole Jordaan</string>
    <string name="app_save">Save</string>
    <string name="app_delete">Delete</string>
    <string name="app_edit">Edit</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_sure">Are you sure?</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>

    <!-- notes values -->
    <string name="notes_btn_addNote">Add New Note</string>
    <string name="notes_btn_editNote">Edit Note</string>
    <string name="notes_emptyList">No notes created…</string>
    <string name="notes_hint_title">Title</string>
    <string name="notes_hint_content">Your note…</string>
    <string name="notes_error">Please enter a note title</string>
    <string name="notes_success">Note successfully Updated</string>
    <string name="notes_successDelete">Note successfully Updated</string>
    <string name="notes_successCreated">Note successfully Created</string>
    <string name="notes_delete">Delete this note?</string>

    <!-- checklist values -->
    <string name="chkList_btn_addChk">Add Checklist</string>
    <string name="chkList_btn_editChk">Edit Checklist</string>
    <string name="chkList_input_listName">Enter your list name…</string>
    <string name="chkList_create_list">Create new List</string>
    <string name="chkList_error">Please enter a checklist title</string>
    <string name="chkList_successCreated">List successfully created!</string>
    <string name="chkList_successDeleted">List successfully deleted!</string>

    <string name="chkbox_add_title">Add Checkbox</string>
    <string name="chkbox_input_listName">Enter your task name…</string>
    <string name="chk_options_menu_delete">Delete List</string>
    <string name="chk_dialog_delete">Delete List?</string>
    <string name="chk_options_menu_addChkBox">Add Checkbox</string>
    <string name="chk_options_menu_delChkBox">Delete checkbox?</string>
    <string name="chk_error">Please enter a checkbox title </string>
    <string name="chk_successCreated">Checkbox successfully created </string>

    <!-- todos values -->
    <string name="todos_error">Please enter a task title</string>
    <string name="todos_title_todo">To Do</string>
    <string name="todos_title_doing">Doing</string>
    <string name="todos_title_done">Done</string>
    <string name="todos_title_dueDate">Set a event in your calendar: </string>
    <string name="todos_btn_clear">Delete Tasks on this column</string>
    <string name="todos_btn_DeleteAll">Delete all Tasks</string>
    <string name="todos_add_task">Add Task</string>
    <string name="todos_add_taskDate">Set a due date </string>
    <string name="todos_add_taskTime">Set a reminder time </string>
    <string name="todos_update_taskSuccess">Updated Task successfully!</string>
    <string name="todos_delete_taskSuccess">Task delete successfully!</string>
    <string name="todos_clear_boardSuccess">The Board was cleared successfully!</string>
    <string name="todos_deleteAll_Success">All tasks were deleted successfully!</string>
    <string name="todos_menu_edit">Edit Task</string>
    <string name="todos_menu_add">Add Task</string>
    <string name="todos_menu_delete">Delete Task</string>
    <string name="todos_dialog_delete">Delete this Task?</string>
    <string name="todos_dialog_Clear">Delete Tasks on this column?</string>
    <string name="todos_dialog_deleteAll">Delete all Items?</string>
    <string name="todos_menu_moveTodo">Move to "To Do"</string>
    <string name="todos_menu_moveDoing">Move to "Doing"</string>
    <string name="todos_menu_moveDone">Move to "Done"</string>
    <string name="todos_menu_alreadyTodo">Already on "To do" Tab</string>
    <string name="todos_menu_alreadyDoing">Already on "Doing" Tab</string>
    <string name="todos_menu_alreadyDone">Already on "Done" Tab"</string>
    <string name="todos_menu_header">Select an Option</string>
    <string name="todos_add_editTask">Edit task</string>
    <string name="todos_add_dueDateError">Enter a title, due date and reminder time</string>


    <!-- language values -->
    <string name="lang_menu_en">English</string>
    <string name="lang_menu_fr">French</string>
    <string name="lang_menu_gr">Germany</string>
    <string name="lang_menu_it">Italian</string>
    <string name="lang_menu_ru">Russian</string>
    <string name="lang_menu_jp">Japanese</string>
    <string name="lang_menu_ch">Chinese</string>

    <!-- Navigation Drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


</resources>