<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes.NoteAddActivity">


    <TextView
        android:id="@+id/pgTitle"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="22dp"
        android:text="@string/todos_add_task"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etTaskTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="36dp"
        android:text="@string/app_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/notes_hint_title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnDate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/todos_add_taskDate"
        app:icon="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="28dp"
        android:text="@string/todos_add_taskTime"
        app:icon="@android:drawable/ic_lock_idle_alarm"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="57dp"
        app:layout_constraintBottom_toTopOf="@+id/btnTime"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="326dp"
        android:layout_marginBottom="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>