<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="668dp"
            android:layout_marginTop="150dp"
            android:text="@string/app_welcome"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/app_welcome2" />

        <Button
            android:id="@+id/btnNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_notify"
            app:icon="@android:drawable/ic_popup_reminder" />


    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navDrawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_drawer" />



</androidx.drawerlayout.widget.DrawerLayout>